force-app/main/default/objects/CC_ST_AppReviews__c/CC_ST_AppReviews__c.object-meta.xml
<CustomObject>
    <label>App Reviews</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>AppReview Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>App Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>