force-app/main/default/objects/CC_ST_AppReviews__c/fields/App_ID__c.field-meta.xml
<CustomField>
    <fullName>App_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>App ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>