force-app/main/default/objects/CC_ST_AppReviews__c/fields/App_Package_Name__c.field-meta.xml
<CustomField>
    <fullName>App_Package_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>App Package Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>