force-app/main/default/objects/CC_ST_AppReviews__c/fields/Author_Name__c.field-meta.xml
<CustomField>
    <fullName>Author_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Author Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>