force-app/main/default/objects/CC_ST_AppReviews__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Customer Service Case related to this review</inlineHelpText>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>AppStoreReviews</relationshipName>
    <type>Lookup</type>
</CustomField>