force-app/main/default/objects/CC_ST_AppReviews__c/fields/CC_Actualizacion_Review__c.field-meta.xml
<CustomField>
    <fullName>CC_Actualizacion_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cuando llega un comentario sobre otro comentario marcamos como actualizado para que no genere respuesta automatica</description>
    <label>Actualización Review</label>
    <type>Checkbox</type>
</CustomField>