force-app/main/default/objects/CC_ST_AppReviews__c/fields/CC_Error_Publicacion__c.field-meta.xml
<CustomField>
    <fullName>CC_Error_Publicacion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para saber que ha habido un error en la publicación del comentario en Google</description>
    <label>Error Publicación</label>
    <type>Checkbox</type>
</CustomField>