force-app/main/default/objects/CC_ST_AppReviews__c/fields/CC_Fabricante__c.field-meta.xml
<CustomField>
    <fullName>CC_Fabricante__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fabricante</label>
    <length>50</length>
    <type>Text</type>
</CustomField>