force-app/main/default/objects/CC_ST_AppReviews__c/fields/CC_Modelo__c.field-meta.xml
<CustomField>
    <fullName>CC_Modelo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Modelo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>