force-app/main/default/objects/CC_ST_AppReviews__c/fields/CC_SLA_Stores__c.field-meta.xml
<CustomField>
    <fullName>CC_SLA_Stores__c</fullName>
    <formula>IF((CC_Tiempo_Respuesta_Stores__c &lt;= 24),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA Stores</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>