force-app/main/default/objects/CC_ST_AppReviews__c/fields/CC_Tipo_Dispositivo__c.field-meta.xml
<CustomField>
    <fullName>CC_Tipo_Dispositivo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipo dispositivo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>