force-app/main/default/objects/CC_ST_AppReviews__c/fields/Developer_Comment__c.field-meta.xml
<CustomField>
    <fullName>Developer_Comment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Developer Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>