force-app/main/default/objects/CC_ST_AppReviews__c/fields/Fecha__c.field-meta.xml
<CustomField>
    <fullName>Fecha__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha</label>
    <type>DateTime</type>
</CustomField>