force-app/main/default/objects/CC_ST_AppReviews__c/fields/Image_Id__c.field-meta.xml
<CustomField>
    <fullName>Image_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Image Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>