force-app/main/default/objects/CC_ST_AppReviews__c/fields/Page__c.field-meta.xml
<CustomField>
    <fullName>Page__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Page</label>
    <length>10</length>
    <type>Text</type>
</CustomField>