force-app/main/default/objects/CC_ST_AppReviews__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rating</label>
    <length>10</length>
    <type>Text</type>
</CustomField>