force-app/main/default/objects/CC_ST_AppReviews__c/fields/Rating_num__c.field-meta.xml
<CustomField>
    <fullName>Rating_num__c</fullName>
    <formula>CASE( Rating__c , &quot;1&quot;, 1, &quot;2&quot;, 2, &quot;3&quot;, 3, &quot;4&quot;, 4, &quot;5&quot;, 5,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rating (Numeric)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>