force-app/main/default/objects/CC_ST_AppReviews__c/fields/SocialPost__c.field-meta.xml
<CustomField>
    <fullName>SocialPost__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Social Post</label>
    <referenceTo>SocialPost</referenceTo>
    <relationshipLabel>App Reviews</relationshipLabel>
    <relationshipName>App_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>