force-app/main/default/objects/CC_ST_AppReviews__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apple App Store</fullName>
            </value>
            <value>
                <fullName>Google Play Store</fullName>
            </value>
            <value>
                <fullName>Huawei App Store</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>