force-app/main/default/objects/CC_ST_AppReviews__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>